# applied-statistical-data-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: compile_project.yml  execute_all_notebooks.yml  latest_version_views.yml  run_all_notebooks.yml
Seminar5/: seminar.ipynb  weight.txt
project/: README.md  charity.csv  charity.xlsx  default.csv  project_Nikolay_Korolev.ipynb  solution.ipynb
seminar1/: freshmen.ipynb  mmreg.csv
seminar10/: ARIMA_ETS.ipynb  sem_ARIMA_ETS_wage.ipynb
seminar2/: Graphs.csv  Intro.ipynb  parametric_hypothesis.ipynb
seminar3/: bootstrap.ipynb
seminar4/: Seminar.ipynb  seminar.ipynb
seminar5/: seattle.txt  seminar.ipynb
seminar6/: seminar.ipynb
seminar7/: GLM_4.ipynb
seminar8/: beauty.csv  sem_ARIMA_ETS_wage.ipynb  seminar.ipynb
seminar9/: CTG.csv  GLM.ipynb  GLM_4.ipynb
task1/: README.md  Task1.ipynb  Task1_Nikolay_Korolev.ipynb  сheck_notes.txt
task2/: README.md  Task2_Nikolay_Korolev.ipynb  task2.ipynb
task3/: README.md  Task3_Nikolay_Korolev.ipynb  rmodels.txt
task4/: README.md  Task4_Nikolay_Korolev.ipynb
util/: execute_all_notebooks.py  run_all_notebooks.py
