[project]
name = "applied-statistical-data-analysis"
version = "1.0.0"
description = "Assignments on applied statistical data analysis. Spring 2020"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bootstrapped>=0.0.2",
    "jupyter>=1.1.1",
    "jupyter-client>=8.8.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pingouin>=0.5.5",
    "pmdarima>=2.1.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
]
